fixed how bg looked on mobile

--- a/media/style.css
+++ b/media/style.css
@@ -7,19 +7,28 @@ body {
     justify-content: center;
     align-items: center;
     display: flex;
-    background: #111;
+    background-image: linear-gradient(180deg, #404040 50%, #030303 50%);
     color: white;
 }
 
 .stripes-bg {
     position: fixed;
-    background: url(https://the-truth-is.nobody-loves.me/i/msjmbi7p.png);
+    background: url('../media/bg.png') repeat-x ;
     animation: 60s scroll infinite linear;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -100;
+}
+
+@keyframes scroll {
+    0% {
+        background-position: 0px;
+    }
+    100% {
+        background-position: 2000px;
+    }
 }
 
 .fg-box {
@@ -79,12 +88,6 @@ body {
 
 .header-menu-text:hover {
     background: #fff !important;
-}
-
-@keyframes scroll {
-    100% {
-        background-position: -2000px 0;
-    }
 }
 
 @media screen and (min-width: 800px) {
@@ -172,7 +175,7 @@ body {
 }
 
 .logoicon {
-    background-image: url(https://the-truth-is.nobody-loves.me/i/80whp0ki.png);
+    background-image: url(../media/logo.png);
     background-repeat: no-repeat;
     background-size: 50px;
     background-position: bottom left;
